add dependency to build.gradle, add TODOs

--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
+    
 }
