add functionality to REDUCEMAP strategy

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -24,5 +25,5 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
     compile group: 'com.opencsv', name: 'opencsv', version: '3.7'
-    
+    compile group: 'com.google.guava',name: 'guava', version: '19.0'
 }
