--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,12 @@
  */
 
 // Apply the java plugin to add support for Java
+apply plugin: 'application'
+mainClassName= "central.Main.java"
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
