build file configuration

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'application'
-mainClassName= "central.Main.java"
+mainClassName= "central.Main"
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
