--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile group: 'com.opencsv', name: 'opencsv', version: '3.7'
     compile group: 'com.google.guava',name: 'guava', version: '19.0'
+    compile group: 'org.apache.spark', name: 'spark-core_2.10', version: '1.6.2'
 }
 
 run{
